# nrtk

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  cosign.pub  poetry.toml  pyproject.toml  tox.ini
.dev/: benchmarking.ipynb  nrtk_diffusion_perturber_demo.ipynb
.gitlab-ci/: .gitlab-build.yml  .gitlab-container.yml  .gitlab-docs.yml  .gitlab-mirror.yml  .gitlab-publish.yml  .gitlab-quality.yml  .gitlab-security.yml  .gitlab-shared.yml  .gitlab-test.yml  .gitlab-vcrm.yml
.gitlab-ci/pipelines/: .gitlab-compliance.yml  .gitlab-container.yml
docs/: .gitattributes  conf.py  containers.rst  contributing.rst  for_nrtk_developers.rst  generating_perturbed_datasets.rst  getting_started.rst  glossary.rst  implementations.rst  index.rst  installation.rst  interfaces.rst  interoperability.rst  introduction.rst  jatic_interoperability.rst  jitter.rst  miscellaneous.rst  nrtk_explanation.rst  nrtk_how_to_topics.rst  nrtk_jatic.rst  nrtk_tutorial.rst  otf_examples.rst  quickstart.rst  readthedocs-reqs.txt  release_notes.rst  release_process.rst  releasing.rst  review_process.rst  risk_factors.rst  sphinx_server.py  testing_and_evaluation_notebooks.rst  user_input_requirements.rst  user_input_requirements_generative.rst  user_input_requirements_geometric.rst  user_input_requirements_photometric.rst  validation_and_trust.rst
docs/_static/: switcher.json
docs/_static/css/: custom.css
docs/_static/javascript/: custom.js
docs/_templates/: custom-class-template.rst  custom-function-template.rst  custom-module-template.rst  sidebar-nav-bs.html
docs/containers/: aukus.rst  nrtk-perturber.rst
docs/development/: contributing.rst  index.rst  release_process.rst  test-architecture.rst
docs/examples/: README.md  albumentations_perturber.ipynb  coco_scorer.ipynb  diffusion_perturber.ipynb  generative_perturbers.ipynb  nrtk_tutorial.ipynb  optical_perturbers.ipynb  otf_visualization.ipynb  perturbers.ipynb  photometric_perturbers.ipynb  pybsm_default_config.ipynb  simple_generic_generator.ipynb  simple_pybsm_generator.ipynb
docs/examples/maite/: README.md  augmentations.ipynb  compute_image_metric.ipynb  jatic-perturbations-saliency.ipynb  nrtk_affine_perturbers_demo.ipynb  nrtk_brightness_perturber_demo.ipynb  nrtk_focus_perturber_demo.ipynb  nrtk_haze_perturber_demo.ipynb  nrtk_jitter_perturber_demo.ipynb  nrtk_lens_flare_demo.ipynb  nrtk_radial_distortion_perturber_demo.ipynb  nrtk_sensor_transformation_demo.ipynb  nrtk_translation_perturber_demo.ipynb  nrtk_turbulence_perturber_demo.ipynb  nrtk_water_droplet_perturber_demo.ipynb
docs/examples/nrtk_xaitk_workflow/: README.md  image_classification_perturbation_saliency.ipynb  object_detection_perturbation_saliency.ipynb
docs/examples/pybsm/: pybsm_default_config.ipynb  pybsm_test.ipynb
docs/explanations/: index.rst  nrtk_explanation.rst  nrtk_overview.rst  risk_factors.rst
docs/figures/: api-docs-fig-01.dot
docs/getting_started/: first_perturbation.rst  index.rst  installation.rst  quickstart.rst  where_to_go_next.rst
docs/how_to_guides/: index.rst
docs/interoperability/: index.rst
docs/maite/: jatic_interoperability.rst  nrtk_as_a_service.rst  schema.rst  testing_and_eval_guides.rst
docs/miscellaneous/: creating_public_release_request.rst  style_sheet.rst
docs/nrtk_jatic/: api.rst  jatic_interoperability.rst  testing_and_eval_guides.rst  utils.rst
docs/operational_risk_modules/: haze.rst  water_droplets.rst
docs/reference/: containers.rst  glossary.rst  index.rst  nrtk_as_a_service.rst  utils.rst
docs/reference/api/: interfaces.rst  (+1 more)
docs/release_notes/: index.rst  pending_release.rst  v0.1.0.rst  v0.10.0.rst  v0.11.0.rst  v0.12.0.rst  v0.13.0.rst  v0.14.0.rst  v0.15.0.rst  v0.15.1.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst  v0.19.0.rst  v0.19.1.rst  v0.19.2.rst  v0.2.0.rst  v0.2.1.rst  v0.20.0.rst  v0.21.0.rst  v0.21.1.rst  v0.22.0.rst  v0.23.0.rst  v0.24.0.rst  v0.25.0.rst  v0.26.0.rst  v0.27.0.rst  v0.27.1.rst  v0.3.0.rst  v0.3.1.rst  v0.3.2.rst  v0.4.0.rst  v0.4.1.rst  v0.4.2.rst  v0.5.0.rst  v0.5.1.rst  v0.5.2.rst  v0.5.3.rst  v0.6.0.rst  v0.7.0.rst  (+5 more)
docs/releasing/: release_notes.rst  release_process.rst
docs/tutorials/: index.rst  testing_and_evaluation_notebooks.rst
examples/: README.md  coco_scorer.ipynb  generator.ipynb  perturbers.ipynb  simple_generic_generator.ipynb  simple_pybsm_generator.ipynb
examples/data/: sample.json
examples/dummy/: dummy-torch.ipynb
examples/jatic_toolbox/: augmentations.ipynb
examples/maite/: augmentations.ipynb  compute_image_metric.ipynb  jatic-perturbations-saliency.ipynb  nrtk_brightness_perturber_demo.ipynb  nrtk_focus_perturber_demo.ipynb  nrtk_turbulence_perturber_demo.ipynb
examples/pybsm/: pybsm_test.ipynb
nrtk/: __init__.py
nrtk/interfaces/: gen_blackbox_response.py  gen_classifier_blackbox_response.py  gen_object_detector_blackbox_response.py  perturb_image.py  perturb_image_factory.py  score_classifications.py  score_detection.py  score_detections.py
scripts/: combine_release_notes.sh  pycv2_installed_version.py  pycv2_is_installed.py  update_release_notes.sh
src/nrtk/: __init__.py  __main__.py
tests/: conftest.py  fakes.py  test_always_passes.py  test_utils.py
tests/_utils/: __init__.py  import_guard_tests_mixin.py
tests/data/: nrtk_bad_linspace_config.json  nrtk_bad_step_config.json  nrtk_blur_config.json  nrtk_brightness_config.json  nrtk_jitter_config.json  nrtk_noise_config.json
tests/entrypoints/: __init__.py  conftest.py  test_entrypoints_optional_deps.py  test_nrtk_perturber.py  test_nrtk_perturber_cli.py  test_nrtk_perturber_opencv.py  test_nrtk_perturber_pybsm.py
tests/examples/: conftest.py  test_notebook_utils.py  test_notebooks.py
tests/impls/: __init__.py  test_nop_perturber.py  test_nop_scorer.py  test_pybsm_utils.py
tests/interfaces/: test_perturb_image.py  test_perturb_image_factory.py  test_plugfigurable.py
tests/interop/: test_interop_optional_deps.py
tests/utils/: __init__.py
(+867 files in other folders)
