# :auto build-system:
[build-system]
requires = ["poetry-core>=1.8.5,<2.0"]
build-backend = "poetry.core.masonry.api"
# :auto build-system:

# :auto package-meta:
[tool.poetry]
name = "nrtk"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "nrtk", from="src"}]
documentation = "https://nrtk.readthedocs.io/"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
# :auto package-meta:
# package-specific meta, don't put this in "generated package-meta"
authors = ["Kitware, Inc. <nrtk@kitware.com>"]
version = "0.21.1"
description = "Natural Robustness Toolkit (NRTK) is a platform for generating validated, sensor-specific perturbations and transformations used to evaluate the robustness of computer vision models."

[tool.poetry.dependencies]
# :auto python-version:
python = "^3.9"
# :auto python-version:

# Python capped to <3.13 because of:
# https://stackoverflow.com/questions/77431252/why-doesnt-poetry-select-the-good-version-of-my-dependency
numpy = [
    {version = ">=1.22,<2.0", python = "<3.12" }, # CVE-2021-34141
    {version = "^1.26", python = ">=3.12,<3.13" } # numpy==1.26 is the first release supporting python 3.12
]
smqtk-classifier = ">=0.19.0"
smqtk-core = ">=0.19"
smqtk-detection = ">=0.22.0"
smqtk-image-io = ">=0.17.1"
tqdm = ">=4.64"
pycocotools = ">=2.0.6"
setuptools = ">=65.6.1"
typing-extensions = ">=4.5.0"

pybsm = {version = ">=0.10.2", optional = true}
opencv-python = {version = ">=4.6", optional = true}
opencv-python-headless = {version = ">=4.6", optional = true}

Pillow = {version=">=10.3.0", optional=true} # CVE-2024-28219

scikit-image = [
    {version = ">=0.20", python = "<3.12", optional=true},
    {version = ">=0.22", python = ">=3.12", optional=true}
]

albumentations = {version=">=2.0.0", optional=true}

#################################
# nrtk.interop.maite dependencies
#################################
maite = {version = "^0.7.1", optional = true}
# REST API deps
fastapi = {version = ">=0.110.0", optional = true}
# httpx = {version = ">=0.27.0", optional = true}
uvicorn = {version = ">=0.29.0", optional = true}
# JSON Schema
pydantic = {version = ">=2.6.4", optional = true}
pydantic_settings = {version = ">=2.2.1", optional = true}

# Optional for tools extra
kwcoco = {version = ">=0.2.18", optional = true}

# Optional for notebook static type checking tests
datasets = {version = ">=3.3.2", optional = true}
matplotlib = {version = ">=3.7.1", optional = true}
numba = {version = ">=0.56.4", optional = true}
tabulate = {version = ">=0.9.0", optional = true}
torch = {version = ">=2.2.0", optional = true}
torchmetrics = {version = ">=1.0.0", optional = true}
torchvision = {version = ">=0.21.0", optional = true}
transformers = {version = ">=4.50.0", optional = true} # CVE-2025-1194
ultralytics = {version = ">=8.3.85", optional = true}
xaitk-jatic = {version = ">=0.5.0", optional = true}
jupytext = {version = ">=1.16.7", optional = true}

[tool.poetry.extras]
graphics = ["opencv-python"]
headless = ["opencv-python-headless"]
pybsm = ["pybsm"]
maite =["maite", "fastapi", "pydantic", "pydantic_settings", "uvicorn"]
tools = ["kwcoco", "Pillow"]
scikit-image = ["scikit-image"]
Pillow = ["Pillow"]
albumentations = ["albumentations"]
notebook-testing = [
    "datasets", "matplotlib", "numba", "tabulate", "torch",
    "torchmetrics", "torchvision", "transformers", "ultralytics",
    "xaitk-jatic", "jupytext", "albumentations"
]

# :auto linting:
# Linting
[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
pre-commit = ">=2.20"
ruff = "^0.5.6"
types-setuptools = ">=65.6.0.1"
sphinx-lint = ">=1.0.0"
pyright = {version=">=1.1.320",extras=["nodejs"]}
# :auto linting:
types-requests = ">=2.31.0.10"

# :auto docs:
# Docs
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=5.3.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = ">=1.1.1"
sphinx-prompt = ">=1.5.0"
sphinx-click = ">=5.0.0"
livereload = ">=2.6.3"
myst-nb = "^1.1.2"
# :auto docs:

# :auto tests:
# Testing
[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = ">=6.5.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
syrupy = ">=4.0.0"
# Jupyter notebook testing
notebook = ">=7.2.2"
papermill = ">=2.4.0"
pyright = {version=">=1.1.320",extras=["nodejs"]}
# :auto tests:
#########################################
# nrtk.interop.maite testing dependencies
#########################################
starlette = ">=0.40.0"
responses = ">=0.25.0"
Pillow = ">=10.3.0" # CVE-2024-28219

[tool.poetry.plugins."smqtk_plugins"]
# Add implementation sub-module exposure here.
"impls.gen_object_detector_blackbox_response.simple_generic_generator" = "nrtk.impls.gen_object_detector_blackbox_response.simple_generic_generator"
"impls.gen_object_detector_blackbox_response.simple_pybsm_generator" = "nrtk.impls.gen_object_detector_blackbox_response.simple_pybsm_generator"
"impls.perturb_image.generic.albumentations_perturber" = "nrtk.impls.perturb_image.generic.albumentations_perturber"
"impls.perturb_image.generic.compose_perturber" = "nrtk.impls.perturb_image.generic.compose_perturber"
"impls.perturb_image.generic.nop_perturber" = "nrtk.impls.perturb_image.generic.nop_perturber"
"impls.perturb_image.generic.haze_perturber" = "nrtk.impls.perturb_image.generic.haze_perturber"
"impls.perturb_image.generic.PIL.enhance" = "nrtk.impls.perturb_image.generic.PIL.enhance"
"impls.perturb_image.generic.cv2.blur" = "nrtk.impls.perturb_image.generic.cv2.blur"
"impls.perturb_image.generic.skimage.random_noise" = "nrtk.impls.perturb_image.generic.skimage.random_noise"
"impls.perturb_image.pybsm.perturber" = "nrtk.impls.perturb_image.pybsm.perturber"
"impls.perturb_image.pybsm.jitter_otf_perturber" = "nrtk.impls.perturb_image.pybsm.jitter_otf_perturber"
"impls.perturb_image.pybsm.detector_otf_perturber" = "nrtk.impls.perturb_image.pybsm.detector_otf_perturber"
"impls.perturb_image.pybsm.turbulence_aperture_otf_perturber" = "nrtk.impls.perturb_image.pybsm.turbulence_aperture_otf_perturber"
"impls.perturb_image.pybsm.circular_aperture_otf_perturber" = "nrtk.impls.perturb_image.pybsm.circular_aperture_otf_perturber"
"impls.perturb_image_factory.generic.step" = "nrtk.impls.perturb_image_factory.generic.step"
"impls.perturb_image_factory.generic.one_step" = "nrtk.impls.perturb_image_factory.generic.one_step"
"impls.perturb_image_factory.generic.linspace_step" = "nrtk.impls.perturb_image_factory.generic.linspace_step"
"impls.perturb_image_factory.pybsm" = "nrtk.impls.perturb_image_factory.pybsm"
"impls.score_detections.class_agnostic_pixelwise_iou_scorer" = "nrtk.impls.score_detections.class_agnostic_pixelwise_iou_scorer"
"impls.score_detections.coco_scorer" = "nrtk.impls.score_detections.coco_scorer"
"impls.score_detections.nop_scorer" = "nrtk.impls.score_detections.nop_scorer"
"impls.score_detections.random_scorer" = "nrtk.impls.score_detections.random_scorer"
"impls.image_metric.snr_image_metric" = "nrtk.impls.image_metric.snr_image_metric"

[tool.poetry.scripts]
nrtk-perturber = "nrtk.interop.maite.utils.bin.nrtk_perturber_cli:nrtk_perturber_cli"

# :auto pytest:
[tool.pytest.ini_options]
addopts = [
    "-lv",                              # Show local in trace-backs.
    "--doctest-modules",                # Increased verbosity.
    "--tb=long",                        # Trace-back print mode.
    "--cov=./src/nrtk",          # Cover our package specifically
    "--cov=./tests",                    # Also cover our tests for dead spots
    "--cov-report=term",                # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
]
testpaths = [
    "tests",
    "src/nrtk",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
# :auto pytest:

# :auto ruff:
[tool.ruff]
# Exclude content as appropriate.
extend-exclude = [
    "__pycache__",
    "demos",
    "scripts",
    "docs/_build",
    "docs/_implementations",
]

line-length = 120
indent-width = 4

# Assume Python 3.9
target-version = "py39"

extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "D1", "D200", "D201", "D211", "D403", "D419", "UP",
    "YTT", "ANN", "S",  "BLE", "B", "A", "COM", "C4", "T10", "ISC", "ICN", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SIM", "TID252", "ARG", "FIX", "PD", "FLY", "NPY", "RUF027",
    "RUF100", "PERF"
]
preview = true  # needed for RUF027
explicit-preview-rules = true

ignore = [
  "ANN101",
  "ANN102",
  # -- Ignore these rules, since they contradict our coding standards
  "C408",  # JATIC guidelines prefer "list()", rather than "[]", to create an empty list
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101",  # Allow asserts in tests
  "SLF001",  # Allow private member access for introspection in tests
  "D100", "D101", "D102", "D103", "D104", "D105", "D107"  # Allow missing docstring in test dir
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true  # Allow Any for *args and **kwargs

[tool.ruff.lint.isort]
known-first-party = ["nrtk"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
# :auto ruff:

# :auto pyright:
[tool.pyright]
pythonVersion = "3.9"
reportMissingImports = "warning"
typeCheckingMode = "standard"
include = [
    "src/nrtk",
    "tests",
    "demos",
    "scripts",
    "docs",
    ]
exclude = [
    "**/__pycache__",
    "docs/_build",
    "docs/_implementations",
    ]
# :auto pyright:
