[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nrtk"
version = "0.27.1"
description = "Natural Robustness Toolkit (NRTK) is a platform for generating validated, sensor-specific perturbations and transformations used to evaluate the robustness of computer vision models."
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Kitware, Inc.", email = "nrtk@kitware.com"}]
requires-python = ">=3.10,<3.14"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "lazy-loader>=0.4",
    # Python capped to <3.14 because of:
    # https://stackoverflow.com/questions/77431252/why-doesnt-poetry-select-the-good-version-of-my-dependency
    # CVE-2021-34141 (numpy < 1.26)
    "numpy>=1.26",
    "smqtk-classifier>=0.20.0",
    "smqtk-core>=0.21",
    "smqtk-detection>=0.23.0",
    "smqtk-image-io>=0.18.0",
    "tqdm>=4.66.3",  # GHSA-g7vv-2v7x-gj9p
    "pycocotools>=2.0.10",
    "setuptools>=78.1.1",
    "typing-extensions>=4.5.0",
]

[project.urls]
Documentation = "https://nrtk.readthedocs.io/"

[project.scripts]
nrtk-perturber = "nrtk.entrypoints:nrtk_perturber_cli"

[project.entry-points."smqtk_plugins"]
# Add implementation sub-module exposure here.
"nrtk.impls.perturb_image.photometric.blur" = "nrtk.impls.perturb_image.photometric.blur"
"nrtk.impls.perturb_image.photometric.enhance" = "nrtk.impls.perturb_image.photometric.enhance"
"nrtk.impls.perturb_image.photometric.noise" = "nrtk.impls.perturb_image.photometric.noise"
"nrtk.impls.perturb_image" = "nrtk.impls.perturb_image"
"nrtk.impls.perturb_image.geometric.random" = "nrtk.impls.perturb_image.geometric.random"
"nrtk.impls.perturb_image.environment" = "nrtk.impls.perturb_image.environment"
"nrtk.impls.perturb_image.generative" = "nrtk.impls.perturb_image.generative"
"nrtk.impls.perturb_image.optical" = "nrtk.impls.perturb_image.optical"
"nrtk.impls.perturb_image.optical.otf" = "nrtk.impls.perturb_image.optical.otf"
"nrtk.impls.perturb_image_factory" = "nrtk.impls.perturb_image_factory"

[project.optional-dependencies]
graphics = ["opencv-python>=4.8.1.78"]  # CVE-2023-4863
headless = ["opencv-python-headless>=4.8.1.78"]  # CVE-2023-4863
pybsm = ["pybsm>=0.14.3"]
maite = [
    "maite>=0.9.2,<0.10.0",
]
tools = [
    "kwcoco>=0.2.18",
    "Pillow>=12.1.1",  # GHSA-cfh3-3jmp-rvhc
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-json-logger>=3.0.0",
]
skimage = [
    "scikit-image>=0.20; python_version < '3.12'",
    "scikit-image>=0.22; python_version >= '3.12'"
]
pillow = ["Pillow>=12.1.1"]  # GHSA-cfh3-3jmp-rvhc
albumentations = ["nrtk-albumentations>=2.2.1"]
waterdroplet = ["scipy>=1.10.0", "numba>=0.56.4"]
diffusion = [
    "torch>=2.6.0",  # GHSA-53q9-r3pm-6pq6
    "diffusers>=0.21.0",
    "accelerate>=0.20.0",
    "Pillow>=12.1.1",  # GHSA-cfh3-3jmp-rvhc
    "transformers>=4.53.0",  # CVE-2025-6921
    "protobuf>=6.33.5",  # GHSA-8qvm-5x2c-j2w7, CVE-2026-0994
]

[tool.poetry]
# Poetry-specific configuration
packages = [{include = "nrtk", from="src"}]

[dependency-groups]
# Linting
linting = [
    "ruff>=0.11.0,<0.12.0",
    "types-setuptools>=65.6.0.1",
    "sphinx-lint>=1.0.0",
    "types-requests>=2.31.0.10",
    # required for pre-commit hook
    "pre-commit>=2.20",
    "pyright[nodejs]>=1.1.320",
]

# Docs
docs = [
    "Sphinx>=5.3.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-prompt>=1.5.0",
    "sphinx-click>=5.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-datatables>=0.3.1,<0.4.0",
    "livereload>=2.6.3",
    "myst-nb>=1.1.2,<2.0.0",
]

# Testing
tests = [
    # pytest unittesting
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0", # reports code coverage
    "pytest-xdist>=3.8.0", # allows -n auto|# to be used to run pytests in parallel
    "syrupy>=5.0.0", # required for snapshot/regression testing
    "Pillow>=12.1.1",  # GHSA-cfh3-3jmp-rvhc  # required for custom conftest.py fixtures
    "responses>=0.25.0", # rquired to test FastAPI (used by entrypoint app)
    "httpx>=0.22.0", # required by starlette.testclient.TestClient (optional dep of starlette, not installed by default)
]

[tool.pytest.ini_options]
addopts = [
    "-lv",                              # Show local in trace-backs.
    "--tb=long",                        # Trace-back print mode.
    "--cov=./src/nrtk",          # Cover our package specifically
    "--cov=./tests",                    # Also cover our tests for dead spots
    "--cov-report=term",                # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
    "--snapshot-warn-unused",           # Prevent test failure when skipping tests
]
# NOTE: --doctest-modules removed from addopts. To run doctests, use:
#   pytest --doctest-modules src/nrtk
# Doctests require optional dependencies to be installed.
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
markers = [
    "core: Run tests that only require core functionality",
    "opencv: Run tests that require the graphics or headless extra",
    "albumentations: Run tests that require the albumentations extra",
    "waterdroplet: Run tests that require the waterdroplet extra",
    "notebooks: Run notebook-related tests (pyright checks)",
    "pillow: Run tests that require the pillow extra",
    "skimage: Run tests that require the skimage extra",
    "diffusion: Run tests that require the diffusion extra",
    "pybsm: Run tests that require the pybsm extra",
    "maite: Run tests that require the maite extra",
    "tools: Run tests that require the tools extra",
]

[tool.coverage.run]
omit = [
    "src/nrtk/utils/_extras.py",
    "src/nrtk/utils/_extras.yml",
]

[tool.ruff]
# Exclude content as appropriate.
extend-exclude = [
    "__pycache__",
    "scripts",
    "docs/_build",
    "docs/_implementations",
    ".tox",
    ".dev",
]

line-length = 120
indent-width = 4

# Assume Python 3.10
target-version = "py310"

extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "D", "UP",
    "YTT", "ANN", "S",  "BLE", "B", "A", "COM", "C4", "T10", "ISC", "ICN", "PLR0917", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SIM", "TID252", "ARG", "FIX", "PD", "FLY", "NPY", "RUF027",
    "RUF100", "PERF", "UP045", "RUF013"
]
preview = true  # needed for RUF027
explicit-preview-rules = true

# From program suggested config
ignore = ["C416"]
external = ["FKA100"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101",  # Allow asserts in tests
  "SLF001",  # Allow private member access for introspection in tests
  "D100", "D101", "D102", "D103", "D104", "D105", "D107",  # Allow missing docstring in test dir
  "PLR0917"  # Allow more than one positional arg in tests
]
"docs/examples/*.ipynb" = [
   "PLR0917"  # Allow more than one positional arg in notebooks
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true  # Allow Any for *args and **kwargs

[tool.ruff.lint.isort]
known-first-party = ["nrtk"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pylint]
max-positional-args = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pyright]
pythonVersion = "3.10"
reportMissingImports = "warning"
typeCheckingMode = "standard"
include = [
    "src/nrtk",
    "tests",
    "scripts",
    "docs",
    ]
exclude = [
    "**/__pycache__",
    "docs/_build",
    "docs/_implementations",
    ".tox",
    ".dev",
    ]
